Istio/Traffic-Management/flagger-canary-release/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use Istio's default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "devops.imran"
