Istio/Traffic-Management/flagger-canary-release/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-backend
spec:
  selector:
    matchLabels:
      app: movie-backend
  template:
    metadata:
      labels:
        app: movie-backend
    spec:
      containers:
        - name: movie-backend
          image: sayedimran/istio-sample-app-backend:v1.0.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: movie-backend
  labels:
    app: movie-backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: movie-backend
  type: ClusterIP
---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: movie-backend
spec:
  hosts:
    - "devops.imran"
  gateways: 
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: movie-backend
            port:
              number: 8000
