Istio/Traffic-Management/flagger-canary-release/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-frontend
spec:
  selector:
    matchLabels:
      app: movie-frontend
  template:
    metadata:
      labels:
        app: movie-frontend
    spec:
      containers:
        - name: movie-frontend
          image: sayedimran/istio-sample-app-frontend:v1.0.0
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: movie-frontend
  labels:
    app: movie-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: movie-frontend
  type: ClusterIP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: movie-frontend
spec:
  hosts:
    - "devops.imran"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: movie-frontend
            port:
              number: 80
